deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message_Property__c/Outreach_Message_Property__c.object-meta.xml
<CustomObject>
    <label>Outreach Message Property</label>
    <pluralLabel>Outreach Message Properties</pluralLabel>
    <nameField>
        <label>Line Number</label>
        <type>AutoNumber</type>
        <displayFormat>OMP-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Links one message to every Opportunity it covers, so the activity logs against all of them rather than only the property that got named.</description>
</CustomObject>