deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message_Property__c/fields/Is_Named__c.field-meta.xml
<CustomField>
    <fullName>Is_Named__c</fullName>
    <label>Is Named</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True for the one property named first in the body. Exactly one line per message has this set.</description>
</CustomField>