deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message_Property__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>MasterDetail</type>
    <referenceTo>Outreach_Message__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Master-detail so deleting a message cleans up its lines.</description>
</CustomField>