deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message_Property__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Outreach</relationshipLabel>
    <relationshipName>Outreach_Lines</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
    <description>Lookup with cascade rather than master-detail, matching the house pattern used by Opportunity_Campaign__c: a master-detail parent cannot be re-parented and these lines are administrative rather than owned by the Opportunity.</description>
</CustomField>